# packages/api-contracts/contract-ts/src/models/index.ts
@@ -8,6 +8,10 @@ export * from './AdminMediaAccessGrantPage';
 export * from './AdminMediaAccessGrantRequest';
 export * from './AdminPrivacyRequest';
 export * from './AiPrecheck';
+export * from './AiTextModelProvider';
+export * from './AiTextModelProviderToggleRequest';
+export * from './AiTextModelProviderWriteRequest';
+export * from './AiTextProviderTestResponse';
 export * from './ArrangeRoomItemRequest';
 export * from './ArrangeRoomItemRequestPosition';
 export * from './AttachWishImageRequest';
